fix[storybook]: Fix media info z-index on header, fix alert and consent configuration styles Card: https://app.clickup.com/t/2mybka8

--- a/src/styles/elements/_media-info.css
+++ b/src/styles/elements/_media-info.css
@@ -48,6 +48,10 @@
     flex-direction: var(--media-info-flex-direction);
 }
 
+.header .header-content + .media-info {
+    --media-info-z-index: 0;
+}
+
 .media-info[open] {
     --media-info-scrim-display: block;
     --media-info-figcaption-display: block;
